Views and xml: keyboard